Удаление Guava
- В Maven удалена зависимость для 'com.google.guava:guava'.
- Рефакторинг сопутствующего кода.